--- a/trunk/Molecule.WebSite/atomes/photo/style/photo.css
+++ b/trunk/Molecule.WebSite/atomes/photo/style/photo.css
@@ -51,9 +51,41 @@ p
 	clear: both;
 }
 
+#mapPopup
+{
+	border: solid 1px;
+	background:grey;
+}
+
+.popupHeader
+{
+	text-align: left;
+	padding:0.5ex;
+}
+
+div span.left
+{	
+	position: absolute;
+	left: .5ex;
+	text-align: left;
+}
+
+div span.right
+{
+	position: absolute;
+	right: .5ex;
+	text-align: right;
+}
+
 #map
 {
 	width: 650px;
 	height: 400px;
-	border: solid 1px;
+}
+
+.modalBackground
+{
+	background-color: #000000;
+	filter:alpha(opacity=30);
+	opacity:0.30;
 }
