added configuration to change the directory where files will be uploaded

--- a/trunk/Molecule.WebSite/atomes/upload/style/layout.css
+++ b/trunk/Molecule.WebSite/atomes/upload/style/layout.css
@@ -1,1 +1,14 @@
-﻿
+﻿.destinationDirectoryContainer
+{
+
+}
+
+.destinationDirectoryContainer note
+{
+	font-size:x-small;
+}
+.saveButton
+{
+ float : right;
+ margin-right :10px;
+}
