Added button to download the original photography

--- a/trunk/Molecule.WebSite/atomes/photo/style/photo.css
+++ b/trunk/Molecule.WebSite/atomes/photo/style/photo.css
@@ -61,3 +61,22 @@ p
 	width: 650px;
 	height: 400px;
 }
+
+.rawFile
+{
+    position:relative;
+    text-align:left;
+    width:100%;
+   	font-size:small;
+   	margin : 1px;
+}
+
+.rawFile a
+{
+   	font-size:small;
+}
+
+.rawFile img
+{
+    border : 0px;
+}
