--- a/trunk/Molecule.WebSite/Page.Master
+++ b/trunk/Molecule.WebSite/Page.Master
@@ -45,7 +45,7 @@
             </div>
         </ProgressTemplate>
     </asp:UpdateProgress>
-    <cc1:AlwaysVisibleControlExtender ID="AlwaysVisibleControlExtender1" runat="server"
+    <cc1:AlwaysVisibleControlExtender runat="server"
         TargetControlID="UpdateProgress" HorizontalSide="Left" VerticalSide="Top" HorizontalOffset="0">
     </cc1:AlwaysVisibleControlExtender>
     <div id="pagePanel">
@@ -58,7 +58,7 @@
             </div>
             <div id="pageTitle">
                 <h1>
-                    <asp:Label ID="pageTitleLabel" runat="server"><%=Page.Title%></asp:Label></h1>
+                    <asp:Label runat="server"><%=Page.Title%></asp:Label></h1>
             </div>
         </div>
         <div id="sideBar">
