--- a/trunk/Molecule.WebSite/atomes/photo/style/common.css
+++ b/trunk/Molecule.WebSite/atomes/photo/style/common.css
@@ -15,7 +15,8 @@
 {
 	border:solid 1px Grey;
 	padding:4px;
-	
+	width:80px;
+	height:80px;
 }
 
 .PhotoLink_HoverIcon
@@ -36,7 +37,6 @@
 	color:White;
 	font-weight:bolder;
 	float:right;
-	
 	z-index:3;
 	padding-top:4px;
 	padding-left:7px;
