--- a/trunk/Molecule.WebSite/atomes/photo/style/common.css
+++ b/trunk/Molecule.WebSite/atomes/photo/style/common.css
@@ -55,8 +55,8 @@
 
 .PhotoLink_HoverBackground
 {
-	opacity: 0.4;
-	filter: alpha(opacity=40); /*ie only*/
+	opacity: 0.2;
+	filter: alpha(opacity=20); /*ie only*/
 	background:Black;
 	width:80px;
 	height:80px;
@@ -78,4 +78,12 @@
 .BlockItem
 {
 	display:inline-block;position:relative;
+}
+
+.ActionImage
+{
+	position:relative;
+	display:inline;
+	margin-left:5px;
+	top:5px;
 }
