--- a/trunk/Molecule.WebSite/Page.Master
+++ b/trunk/Molecule.WebSite/Page.Master
@@ -34,11 +34,17 @@
     <link rel="icon" href="~/favicon.ico" type="image/ico" />
     <link runat="server" id="moleculeCssLink" type="text/css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    </asp:ContentPlaceHolder> 
 </head>
-<body>
+
+<body >
     <form runat="server">
-    <asp:ScriptManager runat="server" ID="MasterScriptManager" />
+    <asp:ScriptManager runat="server" ID="MasterScriptManager" >
+        <Scripts>
+            <asp:ScriptReference Path="script/default.js" />
+         </Scripts>
+    </asp:ScriptManager>
+
     <asp:UpdateProgress ID="UpdateProgress" runat="server">
         <ProgressTemplate>
             <div id="updateProgress" class="updatePanel">
