--- a/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
+++ b/trunk/Molecule.MvcWebSite/Views/Shared/Page.Master
@@ -38,7 +38,7 @@
                     !
                     <ul>
                     <% foreach (var atome in data.Atomes){%>
-                        <li><a href="/<%= atome.Name %>/"><%= atome.Name %></a></li>
+                        <li><a href="/<%= atome.Id %>/"><%= atome.Name %></a></li>
 
                     <% } %>
                     </ul>
