--- a/trunk/Molecule.MvcWebSite/Views/Shared/PreferencesPage.Master
+++ b/trunk/Molecule.MvcWebSite/Views/Shared/PreferencesPage.Master
@@ -6,18 +6,13 @@
 </asp:Content>
 <asp:Content runat="server" ID="content1" ContentPlaceHolderID="mainContent">
     <h2>
-        <div ID="tabDefault" class="<%= AtomeService.CurrentPathIsAtome ? "tabTitle" : "tabSelectedTitle" %>">
-            <a href="admin/Default.aspx"><%=Resources.Common.General%></a>
-        </div>
         <% var data = (Molecule.MvcWebSite.Models.PreferencesPageData)ViewData["PreferencesPageData"];
            foreach (var atome in data.Atomes)
            { %>
-        
                 <div class='<%= AtomeService.CurrentPathIsAtome && atome ==  AtomeService.CurrentAtome ? "tabSelectedTitle" : "tabTitle" %>'>
-                    <a href="<%= Url.Action("", atome.PreferencesControllerName, new { atome = atome.Name }) %>"><%= atome.Name %></a>
+                    <a href="<%= Url.Action("", atome.PreferencesControllerName, new { atome = atome.Id }) %>"><%= atome.Name %></a>
                 </div>
          <%} %>
-            
     </h2>
     <br />
     <br />
